--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,3 +1,24 @@
-<% @users.each do |user| %>
-<p><%=user.name %></p>
+
+<h2>Sign In</h2>
+<%= form_tag('/login') do %>
+  <%= label_tag 'Email: ' %>
+  <%= text_field_tag 'user[email]' %>
+  <%= label_tag 'Password: ' %>
+  <%= password_field_tag 'user[password]' %>
+  <%= submit_tag 'Sign In' %>
+<% end %>
+<br><br>
+
+<h2>For New Users</h2>
+<%= form_tag("/users") do %>
+  <%= label_tag('user[name]', "Name") %>
+  <%= text_field_tag('user[name]') %>
+
+  <%= label_tag('user[email]', "Email") %>
+  <%= text_field_tag('user[email]') %>
+
+  <%= label_tag('user[password]', "Password") %>
+  <%= text_field_tag('user[password]') %>
+
+  <%= submit_tag "Create Account" %>
 <% end %>
